--- a/_includes/themes/hyde/default.html
+++ b/_includes/themes/hyde/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 
-  {% include head.html %}
+  {% include themes/hyde/head.html %}
 
   <body>
 
-    {% include sidebar.html %}
+    {% include themes/hyde/sidebar.html %}
 
     <div class="content container">
       {{ content }}
