fixed style + tags/cateogry

--- a/_includes/themes/hyde/head.html
+++ b/_includes/themes/hyde/head.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="{{ ASSET_PATH }}/css/poole.css">
   <link rel="stylesheet" href="{{ ASSET_PATH }}/css/syntax.css">
   <link rel="stylesheet" href="{{ ASSET_PATH }}/css/hyde.css">
+  <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   <!-- Icons -->
