--- a/_includes/themes/hyde/default.html
+++ b/_includes/themes/hyde/default.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 
-  {% include {{ ASSET_PATH }}/head.html %}
+  {% include themes/hyde/head.html %}
 
   <body class="theme-base-0d">
 
-    {% include {{ ASSET_PATH }}/sidebar.html %}
+    {% include themes/hyde/sidebar.html %}
 
     <div class="content container">
       {{ content }}
     </div>
 
+    {% include JB/analytics %}
   </body>
 </html>
