--- a/_includes/themes/hyde/sidebar.html
+++ b/_includes/themes/hyde/sidebar.html
@@ -25,6 +25,9 @@
           {% endif %}
         {% endif %}
       {% endfor %}
+      <!-- atom & rss feed -->
+      <li><link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed"></li>
+      <li><link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed"></li>
     </ul>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
