--- a/_includes/themes/hyde/post.html
+++ b/_includes/themes/hyde/post.html
@@ -1,22 +1,23 @@
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
-  {% unless page.categories == empty %}
+  {{ content }}
+
+   {% unless page.categories == empty %}
+   categories:
     <ul class="tag_box inline">
-      <li><i class="icon-folder-open"></i></li>
       {% assign categories_list = page.categories %}
       {% include JB/categories_list %}
     </ul>
   {% endunless %}  
 
   {% unless page.tags == empty %}
+  tags:
     <ul class="tag_box inline">
-      <li><i class="icon-tags"></i></li>
       {% assign tags_list = page.tags %}
       {% include JB/tags_list %}
     </ul>
   {% endunless %}
-  {{ content }}
 </div>
 
 <div class="related">
