--- a/_includes/themes/hyde/head.html
+++ b/_includes/themes/hyde/head.html
@@ -20,6 +20,10 @@
   <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
+  <script type="text/javascript"
+          src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
+
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ ASSET_PATH }}/apple-touch-icon-144-precomposed.png">
                                  <link rel="shortcut icon" href="{{ ASSET_PATH }}/favicon.ico">
