--- a/_includes/themes/hyde/sidebar.html
+++ b/_includes/themes/hyde/sidebar.html
@@ -26,10 +26,17 @@
         {% endif %}
       {% endfor %}
       <!-- atom & rss feed -->
+
       <li><link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed"></li>
       <li><link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed"></li>
+      <li>
+        <a href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">atom</a>
+          |
+        <a href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">rss</a>
+      </li>
+
     </ul>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+
   </div>
 </div>
